Builded the main page and corrected the extra space coming after navbar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,3 @@
-.mobile{
-    display: none;
-}
 .navbar{
     background-color: rgba(51, 47, 47, 0.651);
    
@@ -12,9 +9,9 @@
     text-align: center;
     color: white;
     cursor: grab;
-    font-size: 16px;
-    padding: 10px;
-    padding-right: 15px;
+    font-size: 20px;
+    padding: 12px;
+    padding-right: 25px;
     font-family: serif;
     font-weight: bolder;
 }
@@ -29,12 +26,13 @@
 .navbar  img{
     float: right;
     padding: 10px;
-    width: 22px;
+    width: 30px;
     border-radius: 50%;
 }
 .container{
-    background-color: cornsilk;
     border: none;
+    padding: 0px;
+    margin: 0px;
 }
 .container #name{
     text-align: center;
@@ -46,14 +44,11 @@ footer{
     text-align: right;
     color: white;
     padding: 3px;
+    margin: 0px;
 }
 footer p{
     margin-right: 10px;
+    font-size: larger;
 }
-@media screen and (max-width: 640px){
-    footer {background-color: red;}
-    .container {display : none}
-    .mobile{display: inline-block;}
-    
-}
+
 
